--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clsx": "^1.1.0",
     "core-js": "3.17.2",
     "date-fns": "2.23.0",
+    "fast-json-patch": "^3.1.0",
     "framer-motion": "4.1.17",
     "history": "5.0.1",
     "i18next": "20.6.0",
